# KCF_and_kalman_filter

./: .gitignore  CMakeLists.txt  README.md  precomputed_genomes.txt
include/: genetic_algorithm.h  kalman_filter.h  kcftracker.hpp  run_instance.h
src/: fhog.cpp  kcftracker.cpp  main.cpp  runtracker.cpp
